--- a/views/home_ws.html
+++ b/views/home_ws.html
@@ -13,6 +13,66 @@
     <script src="js/jquery-3.6.0-min.js"></script>
     <script src="js/bootstrap-5.3.0-alpha1-min.js"></script>
     <script src="js/underscore-1.13.1-min.js"></script>
+    <script src="js/purl.js"></script>
+    <script>
+        function reload() {
+            $("#myModal").modal("show");
+
+            // Open a WebSocket connection to the Python Bottle app
+            var loc = window.location.href;
+            var hostname = $.url(loc).attr("host");
+            var port = $.url(loc).attr("port");
+            var ws_url = "ws://" + hostname + ":" + port + "/ws"
+            var socket = new WebSocket(ws_url);
+            console.log("WebSocket connection opened: " + ws_url);
+
+            // Compile the Handlebars templates
+            var progressTemplate = _.template($("#progress-template").html());
+            var goodDataTemplate = _.template($("#good-data-template").html());
+            var infoTemplate = _.template($("#info-template").html());
+            var crapDataTemplate = _.template($("#crap-data-template").html());
+
+            // Handle incoming messages from the WebSocket
+            socket.onmessage = function(event) {
+                var message = JSON.parse(event.data);
+                console.log("Received message: ", message);
+                if (message.type == "progress") {
+                    // If the message is a progress update, render the progress template
+                    console.log("Updating progress bar.");
+                    var progress = message.data;
+                    var progressHtml = _.template($('#progress-template').html())({progress: progress});
+                    $('.progress-bar').remove();
+                    $('.progress').append(progressHtml);
+                } else if (message.type == "data") {
+                    // If the message is data, render the data template
+                    console.log("Updating data.");
+                    var infoHtml = infoTemplate({ info: message.data.info });
+                    console.log(infoHtml);
+                    $("#info-data").html(infoHtml);
+                    var dataHtml = goodDataTemplate({ stories: message.data.good});
+                    $("#good-table tbody").html(dataHtml);
+
+                    var dataHtml = crapDataTemplate({ stories: message.data.crap});
+                    $("#crap-table tbody").html(dataHtml);
+
+                    $("#myModal").modal("hide");
+                }
+            };
+                    // Handle WebSocket connection errors
+            socket.onerror = function(error) {
+                console.log("WebSocket connection error: ", error);
+            };
+
+            // Handle WebSocket connection close
+            socket.onclose = function(event) {
+                console.log("WebSocket connection closed with code " + event.code + " and reason " + event.reason);
+            };
+            $("#reload-btn").click(function() {
+                reload();
+            });
+        };
+
+    </script>
   </head>
 
   <body bgcolor="#202020">
@@ -44,15 +104,42 @@
         <% } %>
     </script>
 
+    <button id="reload-btn">Refresh</button>
     <div class="container-fluid" id="data">
-    </div>
-
-    <script id="data-template" type="text/template">
         <div class="row">
             <h1>HN filtered</h1>
+            <p id="info-data"></p>
             <div class="col-md-9 mx-auto">
-                <table class="table table-striped table-hover table-sm">
-                <% _.each(stories.good, function(story) { %>
+                <table class="table table-striped table-hover table-sm" id="good-table">
+                <thead>
+                    <tr>
+                        <th>Comments</th>
+                        <th>Rank</th>
+                        <th>Link</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="row">
+            <h1 data-bs-toggle="collapse" data-bs-target="#crap">HN crap</h1>
+            <div class="col-md-9 mx-auto collapse" id="crap">
+                <table class="table table-striped table-hover table-sm" id="crap-table">
+                <tbody>
+                </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <script id="info-template" type="text/template">
+        <p><%= info %></p>
+    </script>
+
+    <script id="good-data-template" type="text/template">
+                <% _.each(stories, function(story) { %>
                 <tr>
                 <td><a href="<%= story.comments_link %>" target="_blank"><%= story.comments_num %></a></td>
                 <td><span class="score hot" title="Points"><%= story.points %></span></td>
@@ -64,14 +151,10 @@
                 </td>
                 </tr>
                 <% }); %>
-                </table>
-            </div>
-        </div>
-        <div class="row">
-            <h1 data-bs-toggle="collapse" data-bs-target="#crap">HN crap</h1>
-            <div class="col-md-9 collapse" id="crap">
-                <table class="table table-striped table-hover table-sm">
-                <% _.each(stories.crap, function(story) { %>
+    </script>
+
+    <script id="crap-data-template" type="text/template">
+                <% _.each(stories, function(story) { %>
                 <tr class="crap">
                 <td class="crap"><a href="<%= story.comments_link %>" target="_blank"><%= story.comments_num %></a></td>
                 <td class="crap"><span class="score hot" title="Points"><%= story.points %></span></td>
@@ -81,57 +164,17 @@
                         <span class="paren">(</span><span><%= story.host %></span><span class="paren">)</span>
                     </span>
                     <span class="sitebit comhead">
-                        <span class="paren">(</span><span><%= story.why %></span><span class="paren">)</span>
+                        <span class="paren">(</span><span><%= story.why %>, line: <%= story.line_num %></span><span class="paren">)</span>
                     </span>
                 </td>
                 </tr>
                 <% }); %>
-                </table>
-            </div>
-        </div>
     </script>
+
 
       <script>
         $(document).ready(function() {
-             $("#myModal").modal("show");
-
-            // Open a WebSocket connection to the Python Bottle app
-            var socket = new WebSocket("ws://hollywood.lacoronita:9090/ws");
-
-            console.log("WebSocket connection opened.");
-
-            // Compile the Handlebars templates
-            var progressTemplate = _.template($("#progress-template").html());
-            var dataTemplate = _.template($("#data-template").html());
-
-            // Handle incoming messages from the WebSocket
-            socket.onmessage = function(event) {
-                var message = JSON.parse(event.data);
-                console.log("Received message: ", message);
-                if (message.type == "progress") {
-                    // If the message is a progress update, render the progress template
-                    console.log("Updating progress bar.");
-                    var progress = message.data;
-                    var progressHtml = _.template($('#progress-template').html())({progress: progress});
-                    $('.progress-bar').remove();
-                    $('.progress').append(progressHtml);
-                } else if (message.type == "data") {
-                    // If the message is data, render the data template
-                    console.log("Updating data.");
-                    var dataHtml = dataTemplate({ stories: message.data});
-                    $("#data").html(dataHtml);
-                     $("#myModal").modal("hide");
-                }
-            };
-                    // Handle WebSocket connection errors
-            socket.onerror = function(error) {
-                console.log("WebSocket connection error: ", error);
-            };
-
-            // Handle WebSocket connection close
-            socket.onclose = function(event) {
-                console.log("WebSocket connection closed with code " + event.code + " and reason " + event.reason);
-            };
+            reload();
         });
     </script>
   </body>
