--- a/views/home_ws.html
+++ b/views/home_ws.html
@@ -46,9 +46,10 @@
                 } else if (message.type == "data") {
                     // If the message is data, render the data template
                     console.log("Updating data.");
-                    var infoHtml = infoTemplate({ info: message.data.info });
-                    console.log(infoHtml);
-                    $("#info-data").html(infoHtml);
+                    var goodLenHtml = infoTemplate({ info: message.data.gl });
+                    $("#good-len").html(goodLenHtml);
+                    var crapLenHtml = infoTemplate({ info: message.data.cl });
+                    $("#crap-len").html(crapLenHtml);
                     var dataHtml = goodDataTemplate({ stories: message.data.good});
                     $("#good-table tbody").html(dataHtml);
 
@@ -75,7 +76,38 @@
     </script>
   </head>
 
-  <body bgcolor="#202020">
+  <body rbgcolor="#202020">
+
+  <nav class="navbar navbar-expand-lg" data-bs-theme="light" style="background-color: #f60;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="/img/y18.gif" style="border:1px white solid;" width="25" heigth="25"/>
+          Filtered HN
+      </a>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item px-3">
+            <h1 class="accordion-header" id="headerGood">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGood" aria-expanded="true" aria-controls="collapseOne">
+            Good<span id="good-len"></span>
+            </button>
+            </h1>
+          </li>
+          <li class="nav-item px-3">
+            <h1 class="accordion-header" id="headerCrap">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCrap" aria-expanded="false" aria-controls="collapseOne">
+            Crap<span id="crap-len"></span>
+            </button>
+            </h1>
+          </li>
+        </ul>
+      <div class="d-flex justify-content-end">
+        <form class="container-fluid">
+          <button id="reload-btn" class="btn btn-danger me-2" type="button">Refresh</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
@@ -87,8 +119,8 @@
           <h4 class="modal-title">Loading Data...</h4>
         </div>
         <div class="modal-body">
-            <div id="progress" class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            <div id="progress" class="progress" role="progressbar">
+                <div class="progress-bar bg-danger" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
       </div>
@@ -100,42 +132,49 @@
         <% var percentComplete = parseInt(progress) / 3 * 100; %>
         <% var formatted = (percentComplete / 100).toLocaleString(undefined, {style: 'percent', minimumFractionDigits: 0}) %>
         <% if (percentComplete > 0) { %>
-            <div class="progress-bar" role="progressbar" style="width: <%= percentComplete %>%;" aria-valuenow="<%= percentComplete %>" aria-valuemin="0" aria-valuemax="100"><%= formatted %></div>
+            <div class="progress-bar bg-danger" style="width: <%= percentComplete %>%;" aria-valuenow="<%= percentComplete %>" aria-valuemin="0" aria-valuemax="100"><%= formatted %></div>
         <% } %>
     </script>
 
-    <button id="reload-btn">Refresh</button>
-    <div class="container-fluid" id="data">
-        <div class="row">
-            <h1>HN filtered</h1>
-            <p id="info-data"></p>
-            <div class="col-md-9 mx-auto">
-                <table class="table table-striped table-hover table-sm" id="good-table">
-                <thead>
-                    <tr>
-                        <th>Comments</th>
-                        <th>Rank</th>
-                        <th>Link</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-                </table>
-            </div>
+    <div class="accordion" id="data">
+      <div class="accordion-item">
+        <div class="col-md-9 mx-auto accordion-collapse collapse show" id="collapseGood" aria-labelledby="headerGood" data-bs-parent="#data">
+          <div class="accordion-body">
+            <table class="table table-striped table-hover table-sm" id="good-table">
+            <thead>
+              <tr>
+                <th>Comments</th>
+                <th>Rank</th>
+                <th>Link</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+            </table>
+          </div>
         </div>
-        <div class="row">
-            <h1 data-bs-toggle="collapse" data-bs-target="#crap">HN crap</h1>
-            <div class="col-md-9 mx-auto collapse" id="crap">
-                <table class="table table-striped table-hover table-sm" id="crap-table">
-                <tbody>
-                </tbody>
-                </table>
-            </div>
+      </div>
+      <div class="accordion-item">
+        <div class="col-md-9 mx-auto accordion-collapse collapse" id="collapseCrap" aria-labelledby="headerCrap" data-bs-parent="#data">
+          <div class="accordion-body">
+            <table class="table table-striped table-hover table-sm" id="crap-table">
+            <thead>
+              <tr>
+                <th>Comments</th>
+                <th>Rank</th>
+                <th>Link</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+            </table>
+          </div>
         </div>
+      </div>
     </div>
 
     <script id="info-template" type="text/template">
-        <p><%= info %></p>
+        &nbsp;(<%= info %>)
     </script>
 
     <script id="good-data-template" type="text/template">
