--- a/views/home_ws.html
+++ b/views/home_ws.html
@@ -14,71 +14,14 @@
     <script src="js/bootstrap-5.3.0-alpha1-min.js"></script>
     <script src="js/underscore-1.13.1-min.js"></script>
     <script src="js/purl.js"></script>
-    <script>
-        function reload() {
-            $("#myModal").modal("show");
-
-            // Open a WebSocket connection to the Python Bottle app
-            var loc = window.location.href;
-            var hostname = $.url(loc).attr("host");
-            var port = $.url(loc).attr("port");
-            var ws_url = "ws://" + hostname + ":" + port + "/ws"
-            var socket = new WebSocket(ws_url);
-            console.log("WebSocket connection opened: " + ws_url);
-
-            // Compile the Handlebars templates
-            var progressTemplate = _.template($("#progress-template").html());
-            var goodDataTemplate = _.template($("#good-data-template").html());
-            var infoTemplate = _.template($("#info-template").html());
-            var crapDataTemplate = _.template($("#crap-data-template").html());
-
-            // Handle incoming messages from the WebSocket
-            socket.onmessage = function(event) {
-                var message = JSON.parse(event.data);
-                console.log("Received message: ", message);
-                if (message.type == "progress") {
-                    // If the message is a progress update, render the progress template
-                    console.log("Updating progress bar.");
-                    var progress = message.data;
-                    var progressHtml = _.template($('#progress-template').html())({progress: progress});
-                    $('.progress-bar').remove();
-                    $('.progress').append(progressHtml);
-                } else if (message.type == "data") {
-                    // If the message is data, render the data template
-                    console.log("Updating data.");
-                    var goodLenHtml = infoTemplate({ info: message.data.gl });
-                    $("#good-len").html(goodLenHtml);
-                    var crapLenHtml = infoTemplate({ info: message.data.cl });
-                    $("#crap-len").html(crapLenHtml);
-                    var dataHtml = goodDataTemplate({ stories: message.data.good});
-                    $("#good-table tbody").html(dataHtml);
-
-                    var dataHtml = crapDataTemplate({ stories: message.data.crap});
-                    $("#crap-table tbody").html(dataHtml);
-
-                    $("#myModal").modal("hide");
-                }
-            };
-                    // Handle WebSocket connection errors
-            socket.onerror = function(error) {
-                console.log("WebSocket connection error: ", error);
-            };
-
-            // Handle WebSocket connection close
-            socket.onclose = function(event) {
-                console.log("WebSocket connection closed with code " + event.code + " and reason " + event.reason);
-            };
-            $("#reload-btn").click(function() {
-                reload();
-            });
-        };
+    <script src="js/scripts.js"></script>
 
     </script>
   </head>
 
   <body rbgcolor="#202020">
 
-  <nav class="navbar navbar-expand-lg" data-bs-theme="light" style="background-color: #f60;">
+  <nav class="navbar navbar-expand-lg sticky-top" data-bs-theme="light" style="background-color: #f60;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="/img/y18.gif" style="border:1px white solid;" width="25" heigth="25"/>
@@ -140,7 +83,7 @@
       <div class="accordion-item">
         <div class="col-md-9 mx-auto accordion-collapse collapse show" id="collapseGood" aria-labelledby="headerGood" data-bs-parent="#data">
           <div class="accordion-body">
-            <table class="table table-striped table-hover table-sm" id="good-table">
+            <table class="table table-striped table-hover table-sm sortableGood" id="good-table">
             <thead>
               <tr>
                 <th>Comments</th>
@@ -157,7 +100,7 @@
       <div class="accordion-item">
         <div class="col-md-9 mx-auto accordion-collapse collapse" id="collapseCrap" aria-labelledby="headerCrap" data-bs-parent="#data">
           <div class="accordion-body">
-            <table class="table table-striped table-hover table-sm" id="crap-table">
+            <table class="table table-striped table-hover table-sm sortableCrap" id="crap-table">
             <thead>
               <tr>
                 <th>Comments</th>
@@ -214,6 +157,8 @@
       <script>
         $(document).ready(function() {
             reload();
+            setupTableSort("good-table");
+            setupTableSort("crap-table");
         });
     </script>
   </body>
