--- a/views/home_ws.html
+++ b/views/home_ws.html
@@ -8,6 +8,7 @@
     <title>Filtered HN</title>
 
     <link href="css/bootstrap-5.3.0-alpha1-min.css" rel="stylesheet">
+    <link href="css/fontawesome-free-all-6.3.0-min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <script src="js/jquery-3.6.0-min.js"></script>
@@ -28,17 +29,17 @@
           Filtered HN
       </a>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item px-3">
+          <li class="nav-item px-3 accordion-item">
             <h1 class="accordion-header" id="headerGood">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGood" aria-expanded="true" aria-controls="collapseOne">
-            Good<span id="good-len"></span>
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGood" aria-expanded="true" aria-controls="collapseGood">
+            Good&nbsp;<span class="badge text-bg-warning" id="good-len"></span>
             </button>
             </h1>
           </li>
           <li class="nav-item px-3">
             <h1 class="accordion-header" id="headerCrap">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCrap" aria-expanded="false" aria-controls="collapseOne">
-            Crap<span id="crap-len"></span>
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCrap" aria-expanded="false" aria-controls="collapseCrap">
+            Crap&nbsp;<span class="badge text-bg-warning" id="crap-len"></span>
             </button>
             </h1>
           </li>
@@ -117,7 +118,7 @@
     </div>
 
     <script id="info-template" type="text/template">
-        &nbsp;(<%= info %>)
+        <%= info %>
     </script>
 
     <script id="good-data-template" type="text/template">
