--- a/views/home_ws.html
+++ b/views/home_ws.html
@@ -22,6 +22,7 @@
 
   <body rbgcolor="#202020">
 
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg sticky-top" data-bs-theme="light" style="background-color: #f60;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
@@ -32,14 +33,14 @@
           <li class="nav-item px-3 accordion-item">
             <h1 class="accordion-header" id="headerGood">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGood" aria-expanded="true" aria-controls="collapseGood">
-            Good&nbsp;<span class="badge text-bg-warning" id="good-len"></span>
+            Good&nbsp;<span class="badge text-bg-warning" id="good-len">0</span>
             </button>
             </h1>
           </li>
           <li class="nav-item px-3">
             <h1 class="accordion-header" id="headerCrap">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCrap" aria-expanded="false" aria-controls="collapseCrap">
-            Crap&nbsp;<span class="badge text-bg-warning" id="crap-len"></span>
+            Crap&nbsp;<span class="badge text-bg-warning" id="crap-len">0</span>
             </button>
             </h1>
           </li>
@@ -53,7 +54,7 @@
   </nav>
 
 
-  <!-- Modal -->
+  <!-- Progress Modal -->
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
 
