--- a/views/home_ws.html
+++ b/views/home_ws.html
@@ -47,6 +47,11 @@
         </ul>
       <div class="d-flex justify-content-end">
         <form class="container-fluid">
+          <button id="edit-btn" class="btn btn-danger me-2" type="button">Edit filter</button>
+        </form>
+      </div>
+      <div class="d-flex justify-content-end">
+        <form class="container-fluid">
           <button id="reload-btn" class="btn btn-danger me-2" type="button">Refresh</button>
         </form>
       </div>
@@ -91,6 +96,7 @@
                 <th>Comments</th>
                 <th>Rank</th>
                 <th>Link</th>
+                <th>Add</th>
               </tr>
             </thead>
             <tbody>
@@ -132,6 +138,8 @@
                     <span class="sitebit comhead">
                         <span class="paren">(</span><span><%= story.host %></span><span class="paren">)</span>
                     </span>
+                </td>
+                <td>
                 </td>
                 </tr>
                 <% }); %>
