--- a/views/home_ws.html
+++ b/views/home_ws.html
@@ -18,7 +18,6 @@
     <script src="js/uuid-8.3.2-min.js"></script>
     <script src="js/scripts.js"></script>
 
-    </script>
   </head>
 
   <body rbgcolor="#202020">
@@ -27,28 +26,40 @@
   <nav class="navbar navbar-expand-lg sticky-top" data-bs-theme="light" style="background-color: #f60;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="/img/y18.gif" style="border:1px white solid;" width="25" heigth="25"/>
+        <img src="/img/y18.ico" style="border:1px white solid;" width="25" heigth="25"/>
           Filtered HN
       </a>
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item px-3 accordion-item">
-            <h1 class="accordion-header" id="headerGood">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGood" aria-expanded="true" aria-controls="collapseGood">
-            Good&nbsp;<span class="badge text-bg-warning" id="good-len">0</span>
-            </button>
-            </h1>
-          </li>
-          <li class="nav-item px-3">
-            <h1 class="accordion-header" id="headerCrap">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCrap" aria-expanded="false" aria-controls="collapseCrap">
-            Crap&nbsp;<span class="badge text-bg-warning" id="crap-len">0</span>
-            </button>
-            </h1>
-          </li>
-        </ul>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center">
+        <li class="nav-item px-3 accordion-item">
+          <h1 class="accordion-header" id="headerGood">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGood" aria-expanded="true" aria-controls="collapseGood">
+          Good&nbsp;<span class="badge text-bg-warning" id="good-len">0</span>
+          </button>
+          </h1>
+        </li>
+        <li class="nav-item px-3">
+          <h1 class="accordion-header" id="headerCrap">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCrap" aria-expanded="false" aria-controls="collapseCrap">
+          Crap&nbsp;<span class="badge text-bg-warning" id="crap-len">0</span>
+          </button>
+          </h1>
+        </li>
+        <li class="nav-item px-3">
+          <select class="form-select text-bg-warning" id="num-pages" onchange="reload()">
+            <option value="1">Load only first Hacker News page</option>
+            <option value="3" selected>Load 3 pages</option>
+            <option value="5">Load 5 pages</option>
+          </select>
+        </li>
+      </ul>
       <div class="d-flex justify-content-end">
         <form class="container-fluid">
-          <button id="edit-btn" class="btn btn-danger me-2" type="button">Edit filter</button>
+          <button id="login-btn" class="btn btn-danger me-2" type="button" onclick="doLogin()">Login</button>
+        </form>
+      </div>
+      <div class="d-flex justify-content-end">
+        <form class="container-fluid">
+          <button id="edit-btn" class="btn btn-danger me-2" type="button" onclick="editFilter()">Edit filter</button>
         </form>
       </div>
       <div class="d-flex justify-content-end">
@@ -61,38 +72,64 @@
 
 
   <!-- Progress Modal -->
-  <div class="modal fade" id="progressModal" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Loading Data...</h4>
-        </div>
-        <div class="modal-body">
-            <div id="progress" class="progress" role="progressbar">
-                <div class="progress-bar bg-danger" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-        </div>
-      </div>
-
-    </div>
+  <div id="progress" class="progress invisible" role="progressbar">
+      <div class="progress-bar bg-danger" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
 
   <!-- Editor Modal -->
   <div class="modal fade" id="filterModal" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">Edit filter.txt</h5>
         </div>
         <div class="modal-body">
-          <p>You are adding filter for this url: <span id="help-filter-text"></span></p>
+          <p id="urlhelp" style="display: none;">You are adding filter for this url: <span id="help-filter-text"></span></p>
           <p>Lines starting with ">" define sections of similar crap</p>
           <textarea id="filter-text" class="form-control col-md-8" rows="25"></textarea>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" onclick="saveCrap()">Remove that crap!</button>
+          <button type="button" class="btn btn-primary" onclick="saveCrap()">Save filter</button>
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         </div>
+      </div>
+    </div>
+  </div>
+
+<!-- Login Modal -->
+  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <div class="d-flex flex-column align-items-center w-100">
+            <h5 class="modal-title" id="loginModalLabel">Login</h5><br/>
+            <div class="alert alert-danger" id="loginAlert" role="alert" style="display: none">
+            User not found or incorrect password
+            </div>
+          </div>
+        </div>
+        <form id="loginForm">
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="inputEmail">Email address</label>
+              <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email" required>
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="inputPassword">Password</label>
+              <input type="password" class="form-control" id="inputPassword" placeholder="Password" required>
+            </div>
+            <div class="form-group" id="repeat-password" style="display: none">
+              <label for="inputPassword">Repeat Password</label>
+              <input type="password" class="form-control" id="repeatPassword" placeholder="Repeat password">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" id="register-btn" onclick="registerForm()">Register</button>
+            <button type="button" class="btn btn-primary" id="form-login-btn" onclick="login()">Login</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
@@ -101,27 +138,27 @@
   <div class="toast-container position-fixed bottom-0 end-0 p-3">
     <div id="saveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-header">
-        <img src="..." class="rounded me-2" alt="...">
+        <img src="/img/y18.ico" class="rounded me-2" alt="logo">
         <strong class="me-auto">HN Filter</strong>
         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
-      <div class="toast-body">
+      <div class="toast-body" id="toast-text">
         New filter was saved
       </div>
     </div>
   </div>
 
     <script id="progress-template" type="text/template">
-        <% var percentComplete = parseInt(progress) / 3 * 100; %>
+      <% var percentComplete = parseInt(progress) / $("#num-pages").val() * 100; %>
         <% var formatted = (percentComplete / 100).toLocaleString(undefined, {style: 'percent', minimumFractionDigits: 0}) %>
         <% if (percentComplete > 0) { %>
-            <div class="progress-bar bg-danger" style="width: <%= percentComplete %>%;" aria-valuenow="<%= percentComplete %>" aria-valuemin="0" aria-valuemax="100"><%= formatted %></div>
+            <div class="progress-bar bg-danger progress-bar-striped" style="width: <%= percentComplete %>%;" aria-valuenow="<%= percentComplete %>" aria-valuemin="0" aria-valuemax="100"><%= formatted %></div>
         <% } %>
     </script>
 
     <div class="accordion" id="data">
       <div class="accordion-item">
-        <div class="col-md-9 mx-auto accordion-collapse collapse show" id="collapseGood" aria-labelledby="headerGood" data-bs-parent="#data">
+        <div class="col-md-11 mx-auto accordion-collapse collapse show" id="collapseGood" aria-labelledby="headerGood" data-bs-parent="#data">
           <div class="accordion-body">
             <table class="table table-striped table-hover table-sm sortableGood" id="good-table">
             <thead>
@@ -168,7 +205,7 @@
                 <td class="title">
                     <a href="<%= story.link %>" class="storylink" target="_blank"><%= story.title %></a>
                     <span>
-                        (<%= story.host %>)<i id="post-link" onclick="addToCrap('<%= story.host %>')" class="fa-solid fa-thumbs-down ps-2 crapicon"></i>
+                        (<%= story.host %>)<i id="post-link" onclick="editCrap('<%= story.host %>')" class="fa-solid fa-thumbs-down ps-2 crapicon"></i>
                     </span>
                 </td>
                 <td>
@@ -177,6 +214,7 @@
 
     <script id="crap-data-template" type="text/template">
                 <% _.each(stories, function(story, index) { %>
+                <% var escaped_title = encodeString(story.title) %>
                 <tr class="crap">
                 <td class="crap"><a href="<%= story.comments_link %>" target="_blank"><%= story.comments_num %></a></td>
                 <td class="crap"><span class="score hot" title="Points"><%= story.points %></span></td>
@@ -186,7 +224,7 @@
                         <span class="paren">(</span><span><%= story.host %></span><span class="paren">)</span>
                     </span>
                     <span class="sitebit comhead">
-                        <span class="paren">(</span><span id="crap<%= index %>" onclick="showWhy(<%= index %>)">Why?</span><span class="paren">)</span>
+                        <i id="why" class="fa-solid fa-question crapicon" onclick="showWhy('<%= escaped_title %>', '<%= story.host %>', this)"></i>
                     </span>
                 </td>
                 </tr>
